--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -290,8 +290,7 @@ select {
 button,
 html input[type="button"], /* 1 */
 input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button; /* 2 */
+input[type="submit"] { /* 2 */
   cursor: pointer; /* 3 */
 }
 
