--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,8 +16,17 @@
   Font-Awesome
 *****************************************/
 
-@import "font-awesome";
+@import 'font-awesome';
+
+/****************************************
+  Components and Helpers
+*****************************************/
+
+@import 'components';
 
 /****************************************
   Layout
 *****************************************/
+
+@import 'header';
+@import 'home';
