--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,19 +5,25 @@
 
   .fa {
     color: white;
-    font-size: 4em;
+    font-size: 4.5em;
     position: absolute;
-    top: 10px;
-    left: 200px;
+    top: 35px;
+    left: 170px;
   }
 
   .primary-nav {
     position: absolute;
-    top: 30px;
-    right: 200px;
+    top: 35px;
+    right: 170px;
+
+    .btn:not(:last-child) {
+      border: none;
+      padding: 15px 10px;
+      margin-right: 12px;
+    }
 
     .btn {
-      margin: 0 0.2em;
+      padding: 15px 25px;
     }
   }
 }
