--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,4 +1,44 @@
 div.background {
   background-image: url('../images/homebg.jpg');
   background-size: cover;
+  min-height: 580px;
+  position: relative;
+
+  > div {
+    position: relative;
+    min-height: 450px;
+  }
+
+  &.lightbox {
+    background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url('../images/homebg.jpg');
+    background-size: cover;
+  }
+}
+
+.banner {
+  position: absolute;
+  text-align: center;
+  min-height: 170px;
+  left: 0;
+  right: 0;
+  top: 110px;
+
+  h1 {
+    color: white;
+    font-size: 4.5em;
+    margin: 0;
+  }
+
+  p {
+    color: white;
+    font-size: 1.4em;
+    display: block;
+    width: 400px;
+    margin: 5px auto 15px auto;
+  }
+
+  a.btn {
+    display: inline-block;
+    padding: 20px 40px;
+  }
 }
