Finish forms and start gmaps

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
  * 2. Prevent iOS and IE text size adjust after device orientation change,
  *    without disabling user zoom.
  */
+@import url(http://fonts.googleapis.com/css?family=Istok+Web:400,700);
 html {
   font-family: sans-serif;
   /* 1 */
@@ -365,6 +366,16 @@ th {
 /****************************************
   Defaults
 *****************************************/
+html {
+  box-sizing: border-box;
+  font: 12pt 'Istok Web', 'Open Sans', Arial;
+  color: white; }
+
+*, *::before, *::after {
+  box-sizing: inherit;
+  color: inherit;
+  font: inherit; }
+
 /****************************************
   Font-Awesome
 *****************************************/
@@ -2411,11 +2422,13 @@ a.btn {
   background-color: transparent;
   min-height: 100px;
   position: relative; }
+  .primary-header.dark {
+    background-color: #000; }
   .primary-header .fa {
     color: white;
     font-size: 4.5em;
     position: absolute;
-    top: 35px;
+    top: 20px;
     left: 170px; }
   .primary-header .primary-nav {
     position: absolute;
@@ -2429,13 +2442,15 @@ a.btn {
       padding: 15px 25px; }
 
 div.background {
-  background-image: url("../images/homebg.jpg");
-  background-size: cover;
+  background-color: #FFF;
   min-height: 580px;
   position: relative; }
   div.background > div {
     position: relative;
-    min-height: 450px; }
+    min-height: 480px; }
+  div.background.wallpaper {
+    background-image: url("../images/homebg.jpg");
+    background-size: cover; }
   div.background.lightbox {
     background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url("../images/homebg.jpg");
     background-size: cover; }
@@ -2455,8 +2470,8 @@ div.background {
     color: white;
     font-size: 1.4em;
     display: block;
-    width: 400px;
-    margin: 5px auto 15px auto; }
+    width: 420px;
+    margin: 0 auto 15px auto; }
   .banner a.btn {
     display: inline-block;
     padding: 20px 40px; }
@@ -2478,17 +2493,90 @@ div.background {
     .primary-footer nav .fa {
       margin: 15px; }
 
-.form-box {
-  width: 360px;
-  height: 420px;
+.login-box, .signup-box {
+  width: 340px;
+  height: 450px;
   background-color: #FFF;
-  border-radius: 7px;
+  color: #000;
+  border-radius: 4px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); }
-  .form-box h1 {
-    width: 150px;
-    margin: 55px auto; }
-  .form-box .fa {
-    margin-right: 5px; }
+  .login-box h1, .signup-box h1 {
+    width: 170px;
+    margin: 65px auto;
+    font-size: 33pt; }
+    .login-box h1 .fa, .signup-box h1 .fa {
+      color: #000;
+      font-size: 40pt;
+      margin-right: 10px; }
+  .login-box .fa, .signup-box .fa {
+    color: #000;
+    font-size: 20pt; }
+  .login-box a.btn, .signup-box a.btn {
+    background-color: #50A2E5;
+    display: block;
+    width: 237px;
+    padding: 12px;
+    margin: 17px 0 0 54px;
+    text-align: center; }
+  .login-box .cb-form, .signup-box .cb-form {
+    margin-left: 25px; }
+  .login-box .cb-wrapper, .signup-box .cb-wrapper {
+    display: inline-block;
+    width: 125px; }
+
+.signup-box {
+  width: 800px;
+  height: 450px; }
+  .signup-box h1 {
+    width: 220px;
+    margin: 30px auto 12px auto; }
+  .signup-box h3 {
+    margin: 10px 0 0 15px;
+    font-size: 17pt; }
+  .signup-box .form-object {
+    margin-left: 80px; }
+  .signup-box a.btn {
+    margin: 17px auto; }
+
+.form-divider {
+  overflow: hidden; }
+  .form-divider > :first-child {
+    float: left;
+    width: 400px; }
+  .form-divider > :last-child {
+    margin-left: 400px; }
+  .form-divider > :last-child .form-object {
+    margin-left: 20px; }
+
+.form-object {
+  overflow: hidden;
+  margin-top: 15px; }
+  .form-object > :first-child {
+    float: left;
+    width: 30px; }
+  .form-object > :last-child {
+    margin-left: 30px; }
+  .form-object > :first-child {
+    margin: 7px 5px 0 20px; }
+  .form-object input {
+    outline: none;
+    border: 1px solid #C0C0C0;
+    border-radius: 4px;
+    width: 235px;
+    padding: 12px 4px;
+    font-size: 11pt;
+    -webkit-transition: all 0.3s; }
+    .form-object input:focus {
+      border: 1px solid #50A2E5; }
+
+#map {
+  width: 1280px;
+  height: 500px; }
+
+.search {
+  background: url("../images/band-night.jpg") center;
+  background-size: contain;
+  min-height: 500px; }
