--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,12 +1,16 @@
 div.background {
-  background-image: url('../images/homebg.jpg');
-  background-size: cover;
+  background-color: #FFF;
   min-height: 580px;
   position: relative;
 
   > div {
     position: relative;
-    min-height: 450px;
+    min-height: 480px;
+  }
+
+  &.wallpaper {
+    background-image: url('../images/homebg.jpg');
+    background-size: cover;
   }
 
   &.lightbox {
@@ -33,8 +37,8 @@ div.background {
     color: white;
     font-size: 1.4em;
     display: block;
-    width: 400px;
-    margin: 5px auto 15px auto;
+    width: 420px;
+    margin: 0 auto 15px auto;
   }
 
   a.btn {
