--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -1,9 +1,57 @@
 #map {
   width: 1280px;
-  height: 500px;
+  height: 300px;
 }
 .search {
   background: url('../images/band-night.jpg') center;
   background-size: contain;
   min-height: 500px;
+  position: relative;
+}
+
+.search-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 700px;
+  height: 400px;
+  color: #000;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 4px;
+
+  h2 {
+    width: 400px;
+    font-size: 25pt;
+    margin: 30px auto;
+  }
+
+  .map-choices {
+    margin-left: 240px;
+
+    label {
+      margin-right: 50px;
+    }
+  }
+
+  .fa {
+    font-size: 20pt;
+  }
+  
+  .form-object {
+    margin-left: 175px;
+    margin-top: 30px;
+  }
+
+  a.btn {
+    color: #FFF;
+    border-radius: 4px;
+    border: none;
+    background-color: #50A2E5;
+    display: block;
+    width: 237px;
+    padding: 12px;
+    margin: 20px 0 0 220px;
+    text-align: center;
+  }
 }
