--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,5 +1,5 @@
 button {
-  color: white;
+  color: #FFF;
   background-color: transparent;
   border: 1px solid #FFF;
   padding: 1em;
@@ -10,4 +10,26 @@ a.btn {
   @extend button;
   text-decoration: none;
   display: inline-block;
+}
+
+%content-box {
+  width: 340px;
+  min-height: 450px;
+  background-color: #FFF;
+  color: #000;
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+%content-box-button {
+  background-color: #50A2E5;
+  display: block;
+  width: 237px;
+  padding: 12px;
+  margin: 17px auto;
+  text-align: center;
+  border: none;
 }
