--- a/sass/_login.scss
+++ b/sass/_login.scss
@@ -1,13 +1,5 @@
 .login-box, .signup-box {
-  width: 340px;
-  height: 450px;
-  background-color: #FFF;
-  color: #000;
-  border-radius: 4px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  @extend %content-box;
 
   h1 {
   width: 170px;
@@ -27,12 +19,7 @@
   }
 
   a.btn {
-    background-color: #50A2E5;
-    display: block;
-    width: 237px;
-    padding: 12px;
-    margin: 17px 0 0 54px;
-    text-align: center;
+    @extend %content-box-button;
   }
 
   .cb-form {
@@ -47,7 +34,7 @@
 
 .signup-box {
   width: 800px;
-  height: 450px;
+  min-height: 460px;
 
   h1 {
     width: 220px;
@@ -62,10 +49,6 @@
   .form-object {
     margin-left: 80px;
   }
-
-  a.btn {
-    margin: 17px auto;
-  }
 }
 
 .form-divider {
@@ -77,7 +60,7 @@
 }
 
 .form-object {
-  @include media-object(30px);
+  @include media-object(29px);
   margin-top: 15px;
 
   > :first-child {
