--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -2,6 +2,7 @@
   width: 1280px;
   height: 300px;
 }
+
 .search {
   background: url('../images/band-night.jpg') center;
   background-size: contain;
@@ -10,15 +11,10 @@
 }
 
 .search-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  @extend %content-box;
   width: 700px;
-  height: 400px;
-  color: #000;
+  min-height: 400px;
   background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 4px;
 
   h2 {
     width: 400px;
@@ -27,7 +23,8 @@
   }
 
   .map-choices {
-    margin-left: 240px;
+    width: 220px;
+    margin: 0 auto;
 
     label {
       margin-right: 50px;
@@ -35,23 +32,16 @@
   }
 
   .fa {
-    font-size: 20pt;
+    font-size: 16pt;
   }
   
   .form-object {
-    margin-left: 175px;
+    margin-left: 180px;
     margin-top: 30px;
   }
 
   a.btn {
     color: #FFF;
-    border-radius: 4px;
-    border: none;
-    background-color: #50A2E5;
-    display: block;
-    width: 237px;
-    padding: 12px;
-    margin: 20px 0 0 220px;
-    text-align: center;
+    @extend %content-box-button;  
   }
 }
