--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -1,6 +1,7 @@
 #map {
+  color: #000;
   width: 1280px;
-  height: 300px;
+  height: 400px;
 }
 
 .search {
@@ -40,7 +41,7 @@
     margin-top: 15px;
   }
 
-  a.btn {
+  button {
     color: #FFF;
     @extend %content-box-button;  
   }
