--- a/css/main.css
+++ b/css/main.css
@@ -2593,10 +2593,17 @@ div.background {
     .form-object input:focus {
       border: 1px solid #50A2E5; }
 
+.map-wrapper {
+  background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url("../images/googlemaps.jpg");
+  background-size: cover;
+  padding: 20px 0; }
+
 #map {
   color: #000;
-  width: 1280px;
-  height: 400px; }
+  width: 850px;
+  height: 400px;
+  box-shadow: 0 0 15px -4px #000;
+  margin: 0 auto; }
 
 .search {
   background: url("../images/band-night.jpg") center;
@@ -2607,7 +2614,8 @@ div.background {
 .search-box {
   width: 700px;
   min-height: 400px;
-  background-color: rgba(255, 255, 255, 0.8); }
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 12px -4px #000; }
   .search-box h2 {
     width: 400px;
     font-size: 25pt;
