--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -1,7 +1,15 @@
+.map-wrapper {
+  background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url('../images/googlemaps.jpg');
+  background-size: cover;
+  padding: 20px 0;
+}
+
 #map {
   color: #000;
-  width: 1280px;
+  width: 850px;
   height: 400px;
+  box-shadow: 0 0 15px -4px #000;
+  margin: 0 auto;
 }
 
 .search {
@@ -16,6 +24,7 @@
   width: 700px;
   min-height: 400px;
   background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 12px -4px #000;
 
   h2 {
     width: 400px;
