--- a/css/main.css
+++ b/css/main.css
@@ -2593,32 +2593,24 @@ div.background {
     .form-object input:focus {
       border: 1px solid #50A2E5; }
 
-.map-wrapper {
-  background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url("../images/googlemaps.jpg");
-  background-size: cover;
-  padding: 20px 0; }
-
 #map {
   color: #000;
-  width: 850px;
-  height: 400px;
+  width: 100%;
+  height: 650px;
   box-shadow: 0 0 15px -4px #000;
-  margin: 0 auto; }
-
-.search {
-  background: url("../images/band-night.jpg") center;
-  background-size: contain;
-  min-height: 500px;
+  border-radius: 4px;
+  margin: 0 auto;
   position: relative; }
 
 .search-box {
-  width: 700px;
-  min-height: 400px;
+  transform: translate(80%, -17%);
+  width: 350px;
+  min-height: 370px;
   background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0 0 12px -4px #000; }
   .search-box h2 {
-    width: 400px;
-    font-size: 25pt;
+    width: 280px;
+    font-size: 18pt;
     margin: 30px auto; }
   .search-box .map-choices {
     width: 290px;
@@ -2628,7 +2620,7 @@ div.background {
   .search-box .fa {
     font-size: 17pt; }
   .search-box .form-object {
-    margin-left: 180px;
+    margin-left: 15px;
     margin-top: 15px; }
   .search-box button, .search-box a.btn {
     color: #FFF; }
