--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -1,34 +1,24 @@
-.map-wrapper {
-  background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url('../images/googlemaps.jpg');
-  background-size: cover;
-  padding: 20px 0;
-}
-
 #map {
   color: #000;
-  width: 850px;
-  height: 400px;
+  width: 100%;
+  height: 650px;
   box-shadow: 0 0 15px -4px #000;
+  border-radius: 4px;
   margin: 0 auto;
-}
-
-.search {
-  background: url('../images/band-night.jpg') center;
-  background-size: contain;
-  min-height: 500px;
   position: relative;
 }
 
 .search-box {
   @extend %content-box;
-  width: 700px;
-  min-height: 400px;
+  transform: translate(80%, -17%);
+  width: 350px;
+  min-height: 370px;
   background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0 0 12px -4px #000;
 
   h2 {
-    width: 400px;
-    font-size: 25pt;
+    width: 280px;
+    font-size: 18pt;
     margin: 30px auto;
   }
 
@@ -46,7 +36,7 @@
   }
   
   .form-object {
-    margin-left: 180px;
+    margin-left: 15px;
     margin-top: 15px;
   }
 
