--- a/sass/_defaults.scss
+++ b/sass/_defaults.scss
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font: 12pt 'Istok Web', 'Open Sans', Arial;
+  font: 12pt Exo, 'Open Sans', Arial;
   color: white;
 }
 
