Finish User page and start band page

--- a/css/main.css
+++ b/css/main.css
@@ -376,6 +376,9 @@ html {
   color: inherit;
   font: inherit; }
 
+h4, h2 {
+  margin: 0; }
+
 /****************************************
   Font-Awesome
 *****************************************/
@@ -2469,7 +2472,7 @@ a.btn {
       padding: 15px 25px; }
 
 div.background {
-  background-color: #FFF;
+  background-color: #F1F1F1;
   min-height: 580px;
   position: relative; }
   div.background > div {
@@ -2631,19 +2634,89 @@ div.background {
     width: 200px;
     padding: 9px; }
 
-.box {
+.profile-box {
   color: #000;
   background-color: #FFF;
   border-radius: 4px;
-  box-shadow: 0 0 12px -4px; }
+  box-shadow: 0 0 12px -4px;
+  margin: 40px auto 0 auto;
+  width: 80%; }
+  .profile-box a.btn {
+    width: 270px;
+    margin-top: 10px;
+    padding: 6px 20px;
+    text-align: center; }
+    .profile-box a.btn:nth-child(2) {
+      background-color: #50A2E5; }
+    .profile-box a.btn:last-child {
+      background-color: #A9A9C2; }
 
 .user-profile {
-  overflow: hidden; }
+  overflow: hidden;
+  padding: 25px; }
   .user-profile > :first-child {
     float: left;
-    width: 100px; }
+    width: 300px; }
   .user-profile > :last-child {
-    margin-left: 100px; }
+    margin-left: 300px; }
   .user-profile img {
-    height: 100px;
-    display: block; }
+    width: 270px;
+    height: 300px;
+    display: block;
+    border: 3px solid #444;
+    border-radius: 4px; }
+
+.user-header {
+  position: relative;
+  border-bottom: 1px solid #000;
+  padding: 1px;
+  margin-bottom: 15px; }
+  .user-header h2 {
+    margin: 6px 6px 6px 0;
+    padding: 3px 30px 3px 0;
+    border-right: 1px solid #000;
+    font-size: 25pt;
+    display: inline-block; }
+  .user-header h4 {
+    padding-left: 6px; }
+  .user-header .header-info {
+    display: inline-block; }
+
+.profile-content {
+  padding: 6px; }
+
+.band-profile {
+  text-align: center;
+  padding: 30px; }
+  .band-profile h2 {
+    font-size: 27pt; }
+  .band-profile h4 {
+    font-size: 13pt; }
+  .band-profile img {
+    width: 350px;
+    height: 300px;
+    border: 3px solid #444;
+    border-radius: 4px; }
+
+.background-help {
+  background-color: #F1F1F1;
+  padding-bottom: 40px; }
+
+.band-members {
+  width: 80%;
+  margin: 0 auto; }
+  .band-members h2 {
+    font-size: 25pt;
+    border-bottom: 1px solid #000; }
+
+.member-container {
+  background-color: #F1F1F1;
+  margin-top: 4px; }
+
+.member-tile {
+  display: inline-block;
+  margin: 4px 20px 4px 0; }
+  .member-tile img {
+    width: 130px;
+    height: 160px;
+    border-radius: 4px; }
