--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -44,7 +44,7 @@ div.background {
   a.btn {
     display: inline-block;
     padding: 20px 40px;
-    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
 
     &:hover {
       background-color: #FFF;
