--- a/sass/_lightbox.scss
+++ b/sass/_lightbox.scss
@@ -87,7 +87,7 @@
     width: 235px;
     padding: 8px 4px;
     font-size: 10pt;
-    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
 
     &:focus {
       border: 1px solid #50A2E5;
