--- a/sass/_defaults.scss
+++ b/sass/_defaults.scss
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   font: 12pt Exo, 'Open Sans', Arial;
-  color: white;
+  color: #FFF;
 }
 
 *, *::before, *::after {
