--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ th {
 html {
   box-sizing: border-box;
   font: 12pt Exo, 'Open Sans', Arial;
-  color: white; }
+  color: #FFF; }
 
 *, *::before, *::after {
   box-sizing: inherit;
@@ -2450,7 +2450,7 @@ a.btn {
   .primary-header.dark {
     background-color: #000; }
   .primary-header .fa {
-    color: white;
+    color: #FFF;
     font-size: 4.5em;
     position: absolute;
     top: 15px;
