--- a/css/main.css
+++ b/css/main.css
@@ -2472,9 +2472,10 @@ a.btn {
       padding: 15px 25px; }
 
 div.background {
-  background-color: #F1F1F1;
+  background-color: #444;
   min-height: 580px;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   div.background > div {
     position: relative;
     min-height: 480px; }
@@ -2482,7 +2483,7 @@ div.background {
     background-image: radial-gradient(rgba(35, 35, 35, 0.3), rgba(35, 35, 35, 0.3)), url("../images/bg3.jpg");
     background-size: cover; }
   div.background.lightbox {
-    background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url("../images/bg3.jpg");
+    background: radial-gradient(rgba(35, 35, 35, 0.75), rgba(35, 35, 35, 0.75)), url("../images/bg3blur.jpg");
     background-size: cover; }
 
 .banner {
@@ -2640,7 +2641,7 @@ div.background {
   border-radius: 4px;
   box-shadow: 0 0 12px -4px;
   padding: 1px;
-  margin: 40px auto 0 auto;
+  margin: 40px auto;
   width: 80%; }
   .profile-box b {
     color: #4091d2; }
@@ -2705,10 +2706,6 @@ div.background {
     height: 230px;
     border: 3px solid #444;
     border-radius: 4px; }
-
-.background-help {
-  background-color: #F1F1F1;
-  padding-bottom: 40px; }
 
 .band-members {
   width: 80%;
