--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,7 +1,8 @@
 div.background {
-  background-color: #F1F1F1;
+  background-color: #444;
   min-height: 580px;
   position: relative;
+  overflow: hidden;
 
   > div {
     position: relative;
@@ -14,7 +15,7 @@ div.background {
   }
 
   &.lightbox {
-    background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url('../images/bg3.jpg');
+    background: radial-gradient(rgba(35, 35, 35, 0.75), rgba(35, 35, 35, 0.75)), url('../images/bg3blur.jpg');
     background-size: cover;
   }
 }
