--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -4,7 +4,7 @@
   border-radius: 4px;
   box-shadow: 0 0 12px -4px;
   padding: 1px;
-  margin: 40px auto 0 auto;
+  margin: 40px auto;
   width: 80%;
 
   b {
@@ -93,11 +93,6 @@
     border: 3px solid #444;
     border-radius: 4px;
   }
-}
-
-.background-help {
-  background-color: #F1F1F1;
-  padding-bottom: 40px;
 }
 
 .band-members {
