Finish profile stylings

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,5 +1,5 @@
 div.background {
-  background-color: #444;
+  background-color: #A5A5A5;
   min-height: 580px;
   position: relative;
   overflow: hidden;
@@ -15,7 +15,7 @@ div.background {
   }
 
   &.lightbox {
-    background: radial-gradient(rgba(35, 35, 35, 0.75), rgba(35, 35, 35, 0.75)), url('../images/bg3blur.jpg');
+    background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url('../images/bg3.jpg');
     background-size: cover;
   }
 }
