--- a/css/main.css
+++ b/css/main.css
@@ -2429,7 +2429,7 @@ a.btn {
   left: 50%;
   transform: translate(-50%, -50%); }
 
-.login-box button, .login-box a.btn, .signup-box button, .signup-box a.btn, .search-box button, .search-box a.btn {
+.login-box button, .login-box a.btn, .signup-box button, .signup-box a.btn, .search-box button, .search-box a.btn, .band-profile a.btn {
   background-color: #50A2E5;
   display: block;
   width: 237px;
@@ -2437,7 +2437,7 @@ a.btn {
   margin: 17px auto;
   text-align: center;
   border: none; }
-  .login-box button:hover, .login-box a.btn:hover, .signup-box button:hover, .signup-box a.btn:hover, .search-box button:hover, .search-box a.btn:hover {
+  .login-box button:hover, .login-box a.btn:hover, .signup-box button:hover, .signup-box a.btn:hover, .search-box button:hover, .search-box a.btn:hover, .band-profile a.btn:hover {
     background-color: #4091d2; }
 
 /****************************************
@@ -2472,7 +2472,7 @@ a.btn {
       padding: 15px 25px; }
 
 div.background {
-  background-color: #444;
+  background-color: #A5A5A5;
   min-height: 580px;
   position: relative;
   overflow: hidden; }
@@ -2483,7 +2483,7 @@ div.background {
     background-image: radial-gradient(rgba(35, 35, 35, 0.3), rgba(35, 35, 35, 0.3)), url("../images/bg3.jpg");
     background-size: cover; }
   div.background.lightbox {
-    background: radial-gradient(rgba(35, 35, 35, 0.75), rgba(35, 35, 35, 0.75)), url("../images/bg3blur.jpg");
+    background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url("../images/bg3.jpg");
     background-size: cover; }
 
 .banner {
@@ -2636,63 +2636,84 @@ div.background {
     padding: 9px; }
 
 .profile-box {
-  color: #000;
-  background-color: #FFF;
-  border-radius: 4px;
-  box-shadow: 0 0 12px -4px;
-  padding: 1px;
+  color: #FFF;
+  background-color: #444;
+  border-radius: 10px;
+  overflow: hidden;
   margin: 40px auto;
-  width: 80%; }
+  width: 50%; }
   .profile-box b {
     color: #4091d2; }
 
-.user-image a.btn {
-  width: 270px;
-  margin-top: 10px;
-  padding: 6px 20px;
+.button-options {
   text-align: center; }
-  .user-image a.btn:nth-child(2) {
-    background-color: #50A2E5; }
-    .user-image a.btn:nth-child(2):hover {
-      background-color: #4091d2; }
-  .user-image a.btn:last-child {
-    background-color: #A9A9C2; }
-    .user-image a.btn:last-child:hover {
-      background-color: #9393A9; }
+  .button-options a.btn {
+    width: 40%;
+    margin: 0 20px 20px 20px;
+    padding: 6px 20px;
+    text-align: center;
+    border: none; }
+    .button-options a.btn:first-child {
+      background-color: #50A2E5; }
+      .button-options a.btn:first-child:hover {
+        background-color: #4091d2; }
+    .button-options a.btn:last-child {
+      background-color: #A9A9C2; }
+      .button-options a.btn:last-child:hover {
+        background-color: #9393A9; }
 
-.user-profile {
-  overflow: hidden;
-  padding: 25px; }
-  .user-profile > :first-child {
-    float: left;
-    width: 300px; }
-  .user-profile > :last-child {
-    margin-left: 300px; }
-  .user-profile img {
-    width: 270px;
-    height: 300px;
-    display: block;
-    border: 3px solid #444;
-    border-radius: 4px; }
+.user-hero {
+  background: radial-gradient(rgba(35, 35, 35, 0.15), rgba(35, 35, 35, 0.15)), url("../images/crowd2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 220px;
+  position: relative; }
+  .user-hero img {
+    position: absolute;
+    top: 40px;
+    left: 120px;
+    width: 150px;
+    height: 150px;
+    border: 3px solid rgba(255, 255, 255, 0.2);
+    border-radius: 50%; }
 
-.user-header {
-  position: relative;
-  border-bottom: 2px solid #50A2E5;
-  padding: 1px;
-  margin-bottom: 15px; }
-  .user-header h2 {
+.user-name {
+  position: absolute;
+  top: 70px;
+  left: 300px; }
+  .user-name h2 {
     margin: 6px 6px 6px 0;
     padding: 3px 30px 3px 0;
-    border-right: 2px solid #50A2E5;
     font-size: 25pt;
     display: inline-block; }
-  .user-header h4 {
+
+.user-info {
+  overflow: hidden;
+  margin-bottom: 15px;
+  overflow: hidden; }
+  .user-info > :first-child {
+    float: left;
+    width: 50%; }
+  .user-info > :last-child {
+    margin-left: 50%; }
+  .user-info h4 {
     padding-left: 6px; }
-  .user-header .header-info {
-    display: inline-block; }
 
 .profile-content {
-  padding: 6px; }
+  padding: 25px; }
+  .profile-content p {
+    margin-left: 10px; }
+
+.band-form-bg {
+  background: radial-gradient(rgba(35, 35, 35, 0.7), rgba(35, 35, 35, 0.7)), url("../images/bandform.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center; }
+
+.band-form h1 {
+  font-size: 24pt;
+  width: 275px; }
 
 .band-profile {
   text-align: center;
@@ -2704,11 +2725,14 @@ div.background {
   .band-profile img {
     width: 280px;
     height: 230px;
-    border: 3px solid #444;
+    border: 3px solid #000;
     border-radius: 4px; }
+  .band-profile a.btn {
+    width: 150px;
+    padding: 5px 25px; }
 
 .band-members {
-  width: 80%;
+  width: 510px;
   margin: 0 auto; }
   .band-members h2 {
     font-size: 25pt;
@@ -2723,16 +2747,16 @@ div.background {
   position: relative;
   visibility: visible; }
   .member-tile img {
-    width: 200px;
-    height: 220px;
+    width: 170px;
+    height: 160px;
     display: block; }
 
 .text-wrapper {
   color: #FFF;
   opacity: 0;
   position: absolute;
-  width: 200px;
-  height: 220px;
+  width: 170px;
+  height: 160px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
