--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -1,78 +1,106 @@
 .profile-box {
-  color: #000;
-  background-color: #FFF;
-  border-radius: 4px;
-  box-shadow: 0 0 12px -4px;
-  padding: 1px;
+  color: #FFF;
+  background-color: #444;
+  border-radius: 10px;
+  overflow: hidden;
   margin: 40px auto;
-  width: 80%;
+  width: 50%;
 
   b {
     color: #4091d2;
   }
 }
 
-.user-image a.btn{
-  width: 270px;
-  margin-top: 10px;
-  padding: 6px 20px;
+.button-options {
   text-align: center;
 
-  &:nth-child(2) {
-    background-color: #50A2E5;
+  a.btn {
+    width: 40%;
+    margin: 0 20px 20px 20px;
+    padding: 6px 20px;
+    text-align: center;
+    border: none;
 
-    &:hover {
-      background-color: #4091d2;
+    &:first-child {
+      background-color: #50A2E5;
+
+      &:hover {
+        background-color: #4091d2;
+      }
     }
-  }
 
-  &:last-child {
-    background-color: #A9A9C2;
+    &:last-child {
+      background-color: #A9A9C2;
 
-    &:hover {
-      background-color: #9393A9;
+      &:hover {
+        background-color: #9393A9;
+      }
     }
   }
 }
 
-.user-profile {
-  @include media-object(300px);
-  padding: 25px;
+.user-hero {
+  background: radial-gradient(rgba(35, 35, 35, 0.15), rgba(35, 35, 35, 0.15)), url('../images/crowd2.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 220px;
+  position: relative;
 
   img {
-    width: 270px;
-    height: 300px;
-    display: block;
-    border: 3px solid #444;
-    border-radius: 4px;
+    position: absolute;
+    top: 40px;
+    left: 120px;
+    width: 150px;
+    height: 150px;
+    border: 3px solid rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
   }
 }
 
-.user-header {
-  position: relative;
-  border-bottom: 2px solid #50A2E5;
-  padding: 1px;
-  margin-bottom: 15px;
+.user-name {
+  position: absolute;
+  top: 70px;
+  left: 300px;
 
   h2 {
     margin: 6px 6px 6px 0;
     padding: 3px 30px 3px 0;
-    border-right: 2px solid #50A2E5;
     font-size: 25pt;
-    display: inline-block;
-  }
-
-  h4 {
-    padding-left: 6px;
-  }
-
-  .header-info {
     display: inline-block;
   }
 }
 
+.user-info {
+  overflow: hidden;
+  margin-bottom: 15px;
+  @include media-object(50%);
+
+  h4 {
+    padding-left: 6px;
+  }
+}
+
 .profile-content {
-  padding: 6px;
+  padding: 25px;
+
+  p {
+    margin-left: 10px;
+  }
+}
+
+.band-form-bg {
+  background: radial-gradient(rgba(35, 35, 35, 0.7), rgba(35, 35, 35, 0.7)), url('../images/bandform.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.band-form {
+  h1 {
+    font-size: 24pt;
+    width: 275px;
+  }
 }
 
 .band-profile {
@@ -90,13 +118,23 @@
   img {
     width: 280px;
     height: 230px;
-    border: 3px solid #444;
+    border: 3px solid #000;
     border-radius: 4px;
+  }
+
+  a.btn {
+    @extend %content-box-button;
+    width: 150px;
+    padding: 5px 25px;
   }
 }
 
+$member-width: 510px;
+$width-hover: $member-width / 3;
+$height-hover: 160px;
+
 .band-members {
-  width: 80%;
+  width: $member-width;
   margin: 0 auto;
   
   h2 {
@@ -116,8 +154,8 @@
   visibility: visible;
 
   img {
-    width: 200px;
-    height: 220px;
+    width: $width-hover;
+    height: $height-hover;
     display: block;
   }
 }
@@ -126,8 +164,8 @@
   color: #FFF;
   opacity: 0;
   position: absolute;
-  width: 200px;
-  height: 220px;
+  width: $width-hover;
+  height: $height-hover;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
