--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -40,7 +40,7 @@
 }
 
 .user-hero {
-  background: radial-gradient(rgba(35, 35, 35, 0.15), rgba(35, 35, 35, 0.15)), url('../images/crowd2.jpg');
+  background: radial-gradient(rgba(35, 35, 35, 0.15), rgba(35, 35, 35, 0.15)), url('../images/crowd2blur.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -97,9 +97,25 @@
 }
 
 .band-form {
+  
+  select {
+    width: 235px;
+    margin-top: 10px;
+  }
+
+  .fa {
+    font-size: 17pt;
+  }
+
+  .band-create input {
+    padding: 8px 4px;
+    font-size: 11pt;
+  }
+
   h1 {
     font-size: 24pt;
     width: 275px;
+    margin: 40px auto;
   }
 }
 
