--- a/css/main.css
+++ b/css/main.css
@@ -2607,6 +2607,19 @@ div.background {
   height: 600px;
   margin: 0 auto;
   position: relative; }
+  #map img {
+    width: 60px;
+    height: 60px; }
+  #map h2 {
+    font-style: bold;
+    color: #4091d2;
+    font-size: 14pt;
+    margin: 5px; }
+  #map h5 {
+    font-size: 10pt;
+    margin: 3px; }
+  #map a {
+    text-decoration: none; }
 
 .search-box {
   transform: translate(110%, -20%);
