--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -1,3 +1,7 @@
+$base-color: #50A2E5;
+$base-color-dark: #4091d2;
+
+
 button {
   color: #FFF;
   background-color: transparent;
@@ -25,7 +29,7 @@ a.btn {
 }
 
 %content-box-button {
-  background-color: #50A2E5;
+  background-color: $base-color;
   display: block;
   width: 237px;
   padding: 12px;
@@ -34,6 +38,6 @@ a.btn {
   border: none;
 
   &:hover {
-    background-color: #4091d2;
+    background-color: $base-color-dark;
   }
 }
