--- a/css/main.css
+++ b/css/main.css
@@ -2726,21 +2726,38 @@ div.background {
   background-repeat: no-repeat;
   background-position: center center; }
 
-.band-form select {
-  width: 235px;
-  margin-top: 10px; }
+.band-form-divider {
+  overflow: hidden; }
+  .band-form-divider > :first-child {
+    float: left;
+    width: 290px; }
+  .band-form-divider > :last-child {
+    margin-left: 290px; }
 
-.band-form .fa {
-  font-size: 17pt; }
-
-.band-form .band-create input {
-  padding: 8px 4px;
-  font-size: 11pt; }
-
-.band-form h1 {
-  font-size: 24pt;
-  width: 275px;
-  margin: 40px auto; }
+.band-form {
+  width: 600px; }
+  .band-form .form-object {
+    margin-top: 20px;
+    margin-left: 30px; }
+  .band-form select {
+    width: 200px;
+    margin-top: 10px; }
+  .band-form .fa {
+    font-size: 18pt; }
+  .band-form .band-form-divider input {
+    padding: 6px 6px;
+    width: 200px; }
+  .band-form .cb-form {
+    margin: 5px auto;
+    width: 440px; }
+    .band-form .cb-form label {
+      margin-left: 2px; }
+  .band-form .cb-wrapper {
+    margin-left: 20px; }
+  .band-form h1 {
+    font-size: 27pt;
+    width: 300px;
+    margin: 20px auto 10px auto; }
 
 .band-profile {
   text-align: center;
