--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -29,7 +29,7 @@
       }
     }
 
-    &:last-child {
+    &.alternate {
       background-color: #A9A9C2;
 
       &:hover {
@@ -165,6 +165,14 @@
     @extend %content-box-button;
     width: 150px;
     padding: 5px 25px;
+
+    &.alternate {
+      background-color: #A9A9C2;
+
+      &:hover {
+        background-color: #9393A9;
+      }
+    }
   }
 }
 
@@ -213,14 +221,30 @@ $height-hover: 160px;
   transition: all 0.4s;
 
   a.btn {
-    padding: 3px 6px;
+    padding: 2px 5px;
     color: #FFF;
-    font-size: 12pt;
+    font-size: 10pt;
     width: 70px;
     transition: all 0.2s;
 
     &:hover {
       background-color: #FFF;
+      color: #444;
+    }
+  }
+
+  button.delete {
+    display: block;
+    margin: 25px auto 0 auto;
+    padding: 2px 5px;
+    border-color: #FF0000;
+    color: #FF0000;
+    font-size: 9pt;
+    width: 100px;
+    transition: all 0.2s;
+
+    &:hover {
+      background-color: #FF0000;
       color: #444;
     }
   }
